--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,10 @@ controllers:
     resource: ../src/Controller/
     type: attribute
 
-testController:
-    path : /test
-    controller: App\Controller\TestController::test
+HomeController:
+    path : /home
+    controller: App\Controller\HomeController::home
+
+ObjectifsController:
+    path : /objectifs
+    controller: App\Controller\ObjectifsController::objectifs
