--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,10 @@ security:
                 # "app_login" is the name of the route created previously
                 login_path: app_login
                 check_path: app_login
-
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: app_login
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -30,6 +33,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/home, roles: ROLE_USER }
+        - { path: ^/objectifs, roles: ROLE_ADMIN }
+
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
