--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,9 +34,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/home, roles: ROLE_USER }
-        - { path: ^/objectifs, roles: ROLE_ADMIN }
-
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
